# libvx

./: AUTHORS  CMakeLists.txt  LICENSE  ProjectHome.md  README
etc/: Doxyfile
etc/cmake/: FindDirectShow.cmake  FindGStreamer0.10.cmake  FindV4L2.cmake  Packaging.cmake.in
include/vx/: backend.h  cdecl.h  context.h  def.h  event.h  frame.h  sink.h  source.h  vx.h
src/: CMakeLists.txt
src/vx/: CMakeLists.txt  _context.h  _frame.h  _globals.h  _object.h  _sink.h  _source.h  backend.c  config.h.cmake  context.c  frame.c  kernel.c  sink.c  source.c
src/vx/_backends/avfoundation/: avfoundation_backend.h  avfoundation_backend.m
src/vx/_backends/ccorc/: Makefile  ccorc_interface.orc
src/vx/_backends/dshow/: dshow_backend.cpp  dshow_backend.h
src/vx/_backends/dshow/dshow_helpers/include/: _missing_idl.h  cpropertybag.h  ds_capture.h  ds_control.h  ds_helper.h  missing_mingw440.h
src/vx/_backends/dshow/dshow_helpers/src/: cpropertybag.cpp  ds_capture.cpp  ds_control.cpp
src/vx/_backends/gst010/: gst010_backend.c  gst010_backend.h
src/vx/_backends/null/: null_backend.c  null_backend.h
src/vx/_backends/qtkit/: qtkit_backend.h  qtkit_backend.m
src/vx/_backends/v4l2/: v4l2_backend.c  v4l2_backend.h
tests/: CMakeLists.txt  createandteardown.c  simplesdl.c  stereocamera.c
